data/derived/fa15/progs/unify/prog1537.ml.out
Characters 145-157:
  (sum / 10, acc@(sum mod 10))
                 ^^^^^^^^^^^^
Error: This expression has type int but an expression was expected of type
         'a list
